AUTOMAKE_OPTIONS=foreign subdir-objects
ACLOCAL_AMFLAGS = -I m4
AM_CPPFLAGS = -Wall -g  $(SAFTBUS_CFLAGS) -I $(top_srcdir)/src -I $(top_builddir)/src 

lib_LTLIBRARIES = \
	lib@PACKAGE@_service.la  \
	lib@PACKAGE@_proxy.la    
# @PACKAGE@ is substituded with the string given to AC_INIT([...])
lib@PACKAGE@_service_la_LDFLAGS = -Wl,--export-dynamic 
lib@PACKAGE@_service_la_SOURCES = \
	src/Dice.cpp                   \
	src/Dice6.cpp                   \
	src/Dice6_Service.cpp            \
	src/Dice12.cpp                    \
	src/Dice12_Service.cpp             \
	src/DiceCup.cpp                     \
	src/DiceCup_Service.cpp              \
	src/create_service.cpp

lib@PACKAGE@_service_includedir = $(includedir)/@PACKAGE@/service
lib@PACKAGE@_service_include_HEADERS = \
	src/Dice.hpp                        \
	src/Dice6.hpp                        \
	src/Dice6_Service.hpp                 \
	src/Dice12.hpp                         \
	src/Dice12_Service.hpp                  \
	src/DiceCup.hpp                          \
	src/DiceCup_Service.hpp               

lib@PACKAGE@_proxy_la_LIBADD  = $(SAFTBUS_LIBS)
lib@PACKAGE@_proxy_la_SOURCES =   \
	src/Dice_Proxy.cpp             \
	src/Dice6_Proxy.cpp             \
	src/Dice12_Proxy.cpp             \
	src/DiceCup_Proxy.cpp                   

lib@PACKAGE@_proxy_includedir = $(includedir)/@PACKAGE@
lib@PACKAGE@_proxy_include_HEADERS = \
	src/Dice_Proxy.hpp                \
	src/Dice6_Proxy.hpp                \
	src/Dice12_Proxy.hpp                \
	src/DiceCup_Proxy.hpp                

bin_PROGRAMS = ex02-plugin-ctl ex02-standalone
ex02_plugin_ctl_LDADD   = $(SAFTBUS_LIBS) lib@PACKAGE@_proxy.la
ex02_plugin_ctl_SOURCES =  \
	src/ex02-plugin-ctl.cpp \
	src/Dice_Proxy.hpp       \
	src/Dice6_Proxy.hpp       \
	src/Dice12_Proxy.hpp       \
	src/DiceCup_Proxy.hpp       

ex02_standalone_LDADD   = $(SAFTBUS_LIBS) -lsaftbus-standalone lib@PACKAGE@_service.la
ex02_standalone_SOURCES = src/ex02-standalone.cpp

# autogenerated files
%_Service.cpp %_Service.hpp %_Proxy.cpp %_Proxy.hpp: %.hpp
	saftbus-gen $< -o src

# cleaning of autogenerated files
CLEANFILES = $(top_builddir)/src/*_Proxy.*pp $(top_builddir)/src/*_Service.*pp 
